# sage_x3_knowledge_base

./: AGENTS.md  AGENT_EXAMPLES.md  AGENT_EXAMPLES.txt  AGENT_PROMPT.md  AGENT_PROMPT.txt  AGENT_PROMPT_SHORT.txt  INDEX.md  QUICKSTART.md  README.md  STRUCTURE.md  TABLES_MANUFACTURING.md  sage_x3_dictionnaire_tables.md
data/: tables_X3.csv  tables_champs_X3.csv
guides/: 00_GUIDE_LLM.md  03_RELATIONS.md  1.2_GLOSSAIRE.md
mcp/: .gitignore  .npmignore  .npmrc.example  DEPLOYMENT.md  PUBLISH.sh  README.md  README.npm.md  README_NPX.md  TEST_GUIDE.md  claude_desktop_config.example.json  package.json  pyproject.toml  requirements.txt  server.py  server_http.py  test_http_server.py  test_server.py
mcp/utils/: __init__.py  csv_loader.py  menu_loader.py
menus/: 4.1_MENUS_LOCAUX.md  menus_locaux.json
modules/database/: 2.0_README.md  2.1_ACHATS_COMPLETE.md  2.2_VENTES_COMPLETE.md  2.4_PRODUCTION_COMPLETE.md  DONNEES_BASE_COMPLETE.md  PRODUCTION_COMPLETE.md  README.md  STOCKS_COMPLETE.md
modules/web/: 12_MODULE_STOCKS.md  14_MODULE_DONNEES_BASE.md  (+4 more)
playground/: .gitignore  AMELIORATIONS_ERREURS_SQL.md  CLAUDE.md  ENTERPRISE_SCENARIO.md  ERGOCLICK_SEEDING_SUCCESS.md  PLAN.md  POSTGRES_MIGRATION.md  POSTGRES_ORACLE_SUPPORT.md  README.md  TEST_CONSOMMATION.md  UNPOLY_INTEGRATION.md  adonisrc.ts  check_data.ts  package-lock.json  package.json  test-form.html  test_query.sql  test_query_postgres.sql  test_query_sqlite.sql  vite.config.ts
scripts/: build_knowledge_base.py  fetch_all_menus.py  fetch_essential_menus.py  generate_complete_modules.py  generate_lucid_files.py
(+155 files in other folders)
